# TSA-UAV-Flight-Controller

./: LICENSE
Drone-Flight-Controller/: #auto_saved_files#  Drone-Flight-Controller-B_Cu.gbr  Drone-Flight-Controller-B_Mask.gbr  Drone-Flight-Controller-B_Paste.gbr  Drone-Flight-Controller-B_Silkscreen.gbr  Drone-Flight-Controller-Edge_Cuts.gbr  Drone-Flight-Controller-F_Cu.gbr  Drone-Flight-Controller-F_Mask.gbr  Drone-Flight-Controller-F_Paste.gbr  Drone-Flight-Controller-F_Silkscreen.gbr  Drone-Flight-Controller-In1_Cu.gbr  Drone-Flight-Controller-In2_Cu.gbr  Drone-Flight-Controller-bottom.pos  Drone-Flight-Controller-job.gbrjob  Drone-Flight-Controller-top.pos  Drone-Flight-Controller.csv  Drone-Flight-Controller.kicad_pcb  Drone-Flight-Controller.kicad_prl  Drone-Flight-Controller.kicad_pro  Drone-Flight-Controller.kicad_sch  Drone-Flight-Controller.kicad_sch-bak  Drone-Flight-Controller.xml  _autosave-Drone-Flight-Controller.kicad_pcb  _autosave-Drone-Flight-Controller.kicad_prl  fp-info-cache  freerouting.dsn  ~_autosave-Drone-Flight-Controller.kicad_pcb.lck
Production-Outputs/: Drone-Flight-Controller-B_Cu.gbr  Drone-Flight-Controller-B_Mask.gbr  Drone-Flight-Controller-B_Paste.gbr  Drone-Flight-Controller-B_Silkscreen.gbr  Drone-Flight-Controller-Edge_Cuts.gbr  Drone-Flight-Controller-F_Cu.gbr  Drone-Flight-Controller-F_Mask.gbr  placement.txt  (+7 more)
software/: CMakeLists.txt  index.html  quadcopter.ino
software/arduino/: quadcopter.ino
software/arduino/quadcopter/: quadcopter.ino
software/include/: ceSerial.h
software/src/: main.cpp  oldmain.cpp  pwm.cpp
(+22 files in other folders)
